# vision-tracking

./: .gitignore  CMakeLists.txt  DOCKER.md  Dockerfile  Dockerfile.cpu  README.md  docker-compose.cpu.yml  docker-compose.yml  run.cpp  run_test.sh  versions.env
app/: CMakeLists.txt
app/inc/: MultiObjectTrackingApp.hpp
app/src/: CommandLineParser.cpp  MultiObjectTrackingApp.cpp
cmake/: DependencyValidation.cmake  versions.cmake
docs/: Build_Instructions.md  Code_Examples.md  Multiple_Object_Tracking_Guide.md  System_Architecture.md
include/: BaseTracker.hpp  BoTSORTWrapper.hpp  ByteTrackWrapper.hpp  SortWrapper.hpp
scripts/: mot_docker_cpu.sh  setup_dependencies.sh
trackers/: BoTSORTWrapper.cpp  ByteTrackWrapper.cpp  CMakeLists.txt  SortWrapper.cpp
trackers/SORT/: Sort.cpp
